--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,15 +62,14 @@
         android:text="Call Owner"
         android:id="@+id/callButton"
         android:onClick="dialPhoneNumber"
-        android:layout_marginTop="120dp"
-        android:layout_below="@+id/addressText"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SMS"
-        android:id="@+id/textSMS"
+        android:text="Your Location"
+        android:id="@+id/locationText"
         android:layout_below="@+id/addressText"
         android:layout_alignParentStart="true"
         android:layout_marginTop="29dp" />
