--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,4 +74,14 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="29dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search for pet"
+        android:id="@+id/btn_switch"
+        android:onClick="changeToSearch"
+        android:layout_below="@+id/callButton"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="56dp" />
+
 </RelativeLayout>
